Update Python version; switch to mutagen
This version also drops the "description" element from the generated
XML.  None of the recent podcasts I tested with had a reliable comment
tag to use for this.

--- a/updatepodcastdir.config.sample
+++ b/updatepodcastdir.config.sample
@@ -4,7 +4,7 @@ rsstemplate: /home/mpickering/podcast/template.rss
 rssoutfile: /var/www/localhost/htdocs/podcast/shows.rss
 
 [web]
-urlprefix: http://mpickering.homeip.net/podcast/
+urlprefix: https://home.mpickering.net/podcast/
 
 [misc]
 maxitems: 15
